Windows OS overflow issue fixed and the 13000 extra lines of CSS removed

--- a/sass/partials/_base-elements.scss
+++ b/sass/partials/_base-elements.scss
@@ -12,7 +12,7 @@ body {
   color: $colourBlack;
 	background: $colourWhite;
 	font-family: 'Raleway', Arial, Helvetica, sans-serif;
-  background-image: url(gfx/crowd.jpg)!important;
+  background-image: url(gfx/crowd2.jpg)!important;
 	background-position: 0 50%;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
